fix: added alt to img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="head-row container-1">
                 
-                    <img src="./img.JPG"/>
+                    <img src="./img.JPG" alt="my avatar"/>
                
                <div class="title">
                    <h1>My CV</h1>
