fix: added some lists

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
                </div> 
                <div class="contacts_title">
                    <h3>My contacts</h3>
-                   <p>anikol200@gmail.com</p>
+                   <ul>
+                    <li>anikol200@gmail.com </li>
+                    <li>My number here</li>
+                </ul>
+                   
                </div>              
             </div>
         </header>
@@ -40,7 +44,12 @@
         Skills
     </h3>
     <div class="inf">
-        I have studied a bit of c++, Java and c#.
+       <ul>
+           <li>C++</li>
+           <li>Java</li>
+           <li>C#</li>
+           <li>JavaScript</li>
+       </ul>
     </div>
 </div>
     <div class="container container-2">
